upload new version of Ex4

--- a/Ex04-LineSelection.Rmd
+++ b/Ex04-LineSelection.Rmd
@@ -2,7 +2,7 @@
 
 **Цель задания** --- освоение методики отбора элементов транспортных сетей с использованием алгоритмов на графах
 
-**Аннотация**. Задание посвящено знакомству с методикой автоматизированного отбора дорог для мелкомасштабного картографирования. Необходимо реализовать алгоритм прореживания транспортной сети (отбора линий), основанный  на принципе маршрутной связности населенных пунктов. Дополнительно реализуется расчет условной графической нагрузки для линий. Задание выполняется в среде _Model Builder_ __ArcGIS 10.5__ с модулем _Network Analyst_.
+**Аннотация**. Задание посвящено знакомству с методикой автоматизированного отбора дорог для мелкомасштабного картографирования. Необходимо реализовать алгоритм прореживания транспортной сети (отбора линий), основанный  на принципе маршрутной связности населенных пунктов. Дополнительно реализуется расчет условной графической нагрузки для линий. Задание выполняется путем разработки инструмента геообработки Python Toolbox с модулем _Network Analyst_ (`arcpy.na`).
 
 Предлагаемый для реализации алгоритм основан на предположении, что в результирующем масштабе необходимо показывать транспортные коммуникации, по которым проходят кратчайшие маршруты между соседними населенными пунктами. Понятие соседства при решении этой задачи может быть формализовано разоличными способами: по количеству [@krivosheina:2012], либо по смежности [@Schmid:2013wh]. В настоящей работе используется соседство по смежности: соседними считаются населенные пункты, у которых соприкасаются ячейки Вороного. Общая схема алгоритма выглядит следующим обазом:
 
@@ -34,66 +34,64 @@
     - *Driving Directions* --- None
     - *Attributes*: добавить новый атрибут типа *Hierarchy* (**Add**). Далее добавить для него оценщика (**Evaluators**), указать, что оценку необходимо делать по полю **Hierarchy**.
 
-## Часть 2. Создание моделей геообработки для отбора элементов транспортной сети {-}
+## Часть 2. Создание инструмента геообработки Python Toolbox для отбора элементов транспортной сети {-}
 
-Создайте внутреннюю модель геообработки **Road Selection Internal**. В качестве входных данных вводите 5 слоев:
+В качестве входных данных необходимо предусмотреть 5 слоев:
 
  - исходные точки (**Input Points**),
- - слой диаграммы Вороного (**Input Thiessen Polygons**),
  - исходные линии (**Input Lines**),
  - набор сетевых данных (**Input Network Dataset**)
  - поле видимости (**Show Field**)
  
 Реализуйте модель в соответствии со следующей последовательностью действий:
 
-1. Итерировать выбор объектов в слое диаграммы Вороного (*Input Thiessen Polygons*).
+1. Создать диаграмму Вороного точек (**Create Thiessen Polygons**). Разместите диаграмму в памяти компьютера (`in_memory\voronoy`).
 
-2. Выбрать с помощью полигона 1 его соседей, используя правило BOUNDARY\_TOUCHES (**Select By Location**).
+2. Создать слой линий (**Create Feature Layer**).
 
-3. Выбрать точки соседей с помощью полигонов 2, используя правило INTERSECT (**Select By Location**).
+3. Создать слой точек (**Create Feature Layer**).
 
-4. Создать на основе сетевого набора данных слой поиска ближайших пунктов обслуживания (**Make Closest Facility Layer**). В качестве параметра *Number of Facilities to Find* оставьте 1. Установите режим движения TRAVEL\_FROM*.*
+4. Создать слой диаграммы Вороного (**Create Feature Layer**).
 
-5. Добавить в слой поиска 4 точки соседей 3 (**Add Locations** в режиме *Incidents*)
+5. Создать поисковый курсор для последовательного обхода ячеек (`rows = arcpy.da.SearchCursor(...)`)
 
-6. Выбрать текущую точку с помощью полигона 1, используя правило WITHIN (**Select By Location**). Использовать в качестве предусловия результат 5.
+6. Организовать обход всех ячеек диаграммы Вороного 1 с помощью курсора (`for row in rows:`. Все дальнейшие операции выполняются внутри цикла.
 
-7. Добавить в слой поиска текущую точку 6 (**Add Locations** в режиме *Facilities*).
+7. Прочитать идентификатор текущего объекта (`id = row[0]`).
 
-8. Очистить выборку в слое диаграммы Вороного (*Input Thiessen Polygons*). (**Select By Attributes** в режиме CLEAR\_SELECTION). Использовать в качестве предусловия результат 7.
+8. Выбрать текущую ячейку Вороного в слое диаграммы 4 по идентификатору (**Select By Attributes**)
 
-9. Очистить выборку в слое точек (*Input Points*). (**Select By Attributes** в режиме CLEAR\_SELECTION). Использовать в качестве предусловия результат 8.
+9. Выбрать с помощью полигона 7 его соседей, используя правило BOUNDARY\_TOUCHES (**Select By Location**).
 
-10. Запустить расчет задачи *Closest Facility* для слоя 7 (**Solve**)
+10. Выбрать в слое точек 3 соседей с помощью полигонов 9, используя правило INTERSECT (**Select By Location**).
 
-11. Извлечь линии маршрутов *Routes* (**Select Data**) из слоя 10.
+11. Создать на основе сетевого набора данных слой поиска ближайших пунктов обслуживания (**Make Closest Facility Layer**). В качестве параметра *Number of Facilities to Find* оставьте 1. Установите режим движения TRAVEL\_FROM*.*
 
-12. Выбрать исходные линии (*Input Lines*) полученными маршрутами 11 (**Select By Location**), используя правило `SHARE_A_LINE_SEGMENT_WITH`.
+12. Добавить в слой поиска 11 точки соседей 10 (**Add Locations** в режиме *Incidents*)
 
-13. Вычислить поле *Show Field* для выбранных линий, используя калькулятор поля (**Calculate Field**). Проставить выделенным линиям значение 1.
+13. Выбрать текущую точку с помощью полигона 8, используя правило WITHIN (**Select By Location**).
 
-14. Очистить выборку в слое линий (Input Lines). (**Select By Attributes** в режиме `CLEAR_SELECTION`).
+14. Добавить в слой поиска текущую точку 13 (**Add Locations** в режиме *Facilities*).
 
-15. Удалить слой *Closest Facility* 4 (**Delete**). Использовать в качестве предусловия результат 14.
+15. Очистить выборку в слое диаграммы Вороного 4 (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
 
-Создайте внешнюю модель геообработки **Road Selection**. В качестве входных слоев используйте:
+16. Очистить выборку в слое точек 3. (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
 
- - исходные точки (**Input Points**);
- - исходные линии (**Input Lines**);
- - набор сетевых данных (**Input Network Dataset**);
- - поле видимости (**Show Field**).
+17. Запустить расчет задачи *Closest Facility* для слоя 11 (**Solve**)
 
-Реализуйте модель в соответствии со следующей последовательностью действий:
+18. Извлечь линии маршрутов *Routes* (**Select Data**) из слоя 17.
 
-1. Создать диаграмму Вороного точек (**Create Thiessen Polygons**). Разместите диаграмм в памяти компьютера (`in_memory\thiessen`)
+19. Выбрать линии 2 маршрутами 17 (**Select By Location**), используя правило `SHARE_A_LINE_SEGMENT_WITH`.
 
-2. Создать слой диаграммы Вороного (**Create Feature Layer**)
+20. Вычислить поле *Show Field* для линий 2, используя калькулятор поля (**Calculate Field**). Проставить выделенным линиям значение 1.
 
-3. Вызвать модель геообработки **Road Selection Internal,** передав ей все входные слои + слой диаграммы Вороного.
+21. Очистить выборку в слое линий 2. (**Select By Attributes** в режиме `CLEAR_SELECTION`).
 
-## Часть 3. Создание модели геообработки для оценки относительной графической нагрузки по линейным объектам {-}
+22. Удалить слой *Closest Facility* 10 (**Delete**).
 
-Используя имеющиеся у вас знания и навыки, создайте модель геообработки, которая будет давать оценку относительной графической нагрузки для линейных объектов по ячейкам регулярной сети.
+## Часть 3. Создание инструента Python Toolbox для оценки относительной графической нагрузки по линейным объектам {-}
+
+Используя имеющиеся у вас знания и навыки, создайте скрипт Python Toolbox, который будет давать оценку относительной графической нагрузки для линейных объектов по ячейкам регулярной сети.
 
 **Относительная графическая нагрузка по линейным объектам** -- суммарная длина линий каждого класса (L~k~) с учетом весовых коэффициентов (w~k~), деленная на площадь ячейки (A):
 
@@ -113,15 +111,15 @@ $$\rho_{L} = \frac{\sum_{k}^{}{w_{k}L_{k}}}{A}$$
 
 **Указания к выполнению:**
 
-В качестве отправной точки можно использовать модель геообработки для оценки относительной графической нагрузки точечных объектов, разработанную в Самостоятельной работе №3. В процессе экспериментальной работы используйте следующие толщины линий (в пикселах):
+В качестве отправной точки можно использовать инструмент геообработки для оценки относительной графической нагрузки точечных объектов, разработанный вами в Самостоятельной работе №1. В процессе экспериментальной работы используйте следующие толщины линий (в пикселах):
 
-```{r}
+```{r, echo = FALSE}
 rosstat::include_table('tables/linewidth_params.xlsx', caption = 'Параметры толщины линии')
 ```
 
 ## Часть 4. Создание и анализ карты транспортной связности районных центров субъекта {-}
 
-Используя разработанные модели отбора и оценки графической нагрузки, выполните заключительную часть работы:
+Используя разработанные инструменты отбора и оценки графической нагрузки, выполните заключительную часть работы:
 
 1. Выполните отбор элементов дорожной сети, проходящих через районные центры (poppnt\_dist). Оформите результат в виде карты масштаба 1:8 000 000. Используйте толщины линий 3, 1.5 и 0.75 пункта соответственно. На схеме должны быть подписаны все районные центры, нанесена граница субъекта и оформлена легенда по трем классам дорог.
 
@@ -132,6 +130,6 @@ rosstat::include_table('tables/linewidth_params.xlsx', caption = 'Парамет
 4. Напишите отчет о проделанной работе, включающий:
     - Описание целей и задач самостоятельной работы
     - Описание идеи алгоритмов отбора элементов дорожной сети и оценки условной графической нагрузки для линейных объектов
-    - Процесс создания моделей геообработки и их внешний вид
+    - Процесс создания инструментов геообработки и их внешний вид
     - Процесс экспериментальной работы
     - Оценку полученных результатов с точки зрения географической достоверности. Оценка должна включать сравнение исходной и результирующей картины транспортной сети региона визуально и по картограмме условной графической нагрузки. 
