update skeleton work

--- a/Ex05-PolygonAxis.Rmd
+++ b/Ex05-PolygonAxis.Rmd
@@ -5,14 +5,14 @@
 ## Часть 1. Подготовка входных данных {-}
 
 1. Выбрать одно из следующих водохранилищ: Куйбышевское, Камское, Братское, Горьковское.
-
+____
 2. Обрезать набор данных (водохранилище + примыкающие к нему реки) с небольшим запасом.
 
 3. Трансформировать данные в оптимальную проекцию.
 
 ## Часть 2. Автоматизация построения скелета фигуры {-}
 
-Данная модель (*Voronoy Skeleton*) должна строить скелет полигонального объекта на основе диаграммы Вороного (Рис. \@ref(fig:skeleton)):
+Данный инструмент геообработки (*Voronoy Skeleton*) должен строить скелет полигонального объекта на основе диаграммы Вороного (Рис. \@ref(fig:skeleton)):
 
 ```{r skeleton, out.width = "100%", fig.cap="Скелет полигонального объекта"}
 knitr::include_graphics("img/skeleton.png")
@@ -52,7 +52,7 @@ knitr::include_graphics("img/skeleton.png")
 
 ## Часть 4. Автоматизация построения срединной оси фигуры {-}
 
-Данная модель (*Medial Axis Connectivity*) должна на основе скелета фигуры (преобразованного в сетевую модель) и примыкающих линий водотоков получать срединную ось, связывающую точки их впадения/истока (Рис. \@ref(fig:medaxis)):
+Данный инструмент геообработки (*Medial Axis Connectivity*) должен на основе скелета фигуры (преобразованного в сетевую модель) и примыкающих линий водотоков получать срединную ось, связывающую точки их впадения/истока (Рис. \@ref(fig:medaxis)):
 
 ```{r medaxis, out.width = "100%", fig.cap="Срединная ось площадного объекта"}
 knitr::include_graphics("img/medial_axis.png")
@@ -66,9 +66,9 @@ knitr::include_graphics("img/medial_axis.png")
 
 - Входной полигональный слой (озера/вдхр).
 
-- Расстояние поиска (используется для локализации точек на сетевой модели), по умолчани. Равно 2000 м.
+- Расстояние поиска (используется для локализации точек на сетевой модели), по умолчанию равно 2000 м.
 
-- Среда притягивания (используется для притягивания концов построенных маршрутов к линиям рек). Расстояние так же по умолчанию равно 200 м.
+- Среда притягивания (используется для притягивания концов построенных маршрутов к линиям рек). Расстояние так же по умолчанию равно 2000 м.
 
 - Выходной класс линейных пространственных объектов.
 
@@ -84,7 +84,7 @@ knitr::include_graphics("img/medial_axis.png")
 
 5. Удалить выделенные вершины (**Delete Features**).
 
-6. Извлечь идентификатор *OBJECTID* для первой точки (**Ger Field Value**).
+6. Извлечь идентификатор *OBJECTID* для первой точки (**Get Field Value**).
 
 7. Выбрать первую точку по атрибуту *OBJECTID,* используя полученное на шаге 6 значение (**Select Layer by Attribute**).
 
@@ -108,9 +108,9 @@ knitr::include_graphics("img/medial_axis.png")
 
 ## Часть 5. Построение срединной оси и описание результатов {-}
 
-1. Используя разработанную на предыдущем этапе модель геообработки и полученную ранее сетевую модель скелета, выполните построение срединной оси выбранного водохранилища.
+1. Используя разработанный на предыдущем этапе инструмент геообработки и полученную ранее сетевую модель скелета, выполните построение срединной оси выбранного водохранилища.
 
-2. Оформите полученные результаты в виде карты с двумя изображениями (лево-право): исходные данные, результат генерализации.
+2. Оформите полученные результаты в виде карты с двумя изображениями (лево-право): исходные данные, результат генерализации. Добавьте на карту подложку из картографическогоо сервиса (можноо использовать OpenStreetMap)
 
 3. Напишите отчет о проделанной работе, включающий:
 
@@ -120,7 +120,7 @@ knitr::include_graphics("img/medial_axis.png")
 
     c. Процесс создания моделей геообработки и их внешний вид.
 
-    d. Процесс экспериментальной работы, включая сники экрана промежуточных результатов.
+    d. Процесс экспериментальной работы, включая снимки экрана промежуточных результатов.
 
     e. Итоговые карты.
 
