--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -115,7 +115,7 @@ knitr::kable(readxl::read_excel('tables/pointsel_params.xlsx'))
 
 6. Выполнить отбор населенных пунктов с графической нагрузкой $2$, $4$ и $6$ населенных пункта на $см^2$ для масштаба $1:4~000~000$. Соответствующий параметр $C$ (_Scale_) подберите, используя найденную регрессионную зависимость.
 
-## Реализация алгоритма взвешенной эффективной площади
+## Реализация алгоритма взвешенной эффективной площади {-}
 
 __Входные параметры:__
 
@@ -196,11 +196,11 @@ __Алгоритм решения задачи:__
     
 8. Сбросьте прогресс-бар (__`arcpy.ResetProgressor`__).
     
-## Применение алгоритма взвешенной эффективной площади
+## Применение алгоритма взвешенной эффективной площади {-}
 
 Используя разработанный инструмент, выполните отбор точек, сохранив процент, аналогичный тому, что был получен в Settlement Spacing при нагрузках $2$, $4$ и $6$.
 
-## Оценка полученных результатов
+## Оценка полученных результатов {-}
 
 1. Выполнить параметризацию параметра $x$ обобщенного закона _Топфера_ для трёх полученных генерализаций по каждому из двух алгоритмов, исходя из предположения, что отношение результирующего и исходного масштаба равно $1:40$.
 
