--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -168,7 +168,7 @@ __Алгоритм решения задачи:__
     
     7.10. Организуйте цикл __`for`__, который для каждой строки курсора будет выполнять следующие действия:
     
-      - Если поле заморозки равно $1$, перейти на следующую итерацию цикла.
+      - Если поле заморозки (7.6) равно $1$, перейти на следующую итерацию цикла.
         
       - Установить надпись прогресс-бара (__`arcpy.SetProgressorLabel`__), которая говорит, что сейчас отбирается i-я точка (6) из общего числа отбираемых (5).
       
@@ -178,7 +178,7 @@ __Алгоритм решения задачи:__
       
       - Выбрать в слое диаграммы Вороного (7.8) ячейки, пересекающиеся с геометрией текущей строки (__Select Layer by Location__).
       
-      - Заполните для выбранных ячеек поле заморозки (7.6) значением $1$.
+      - Заполните для выбранных ячеек поле заморозки (7.6) значением $1$ (__Calculate Field__).
       
       - Установите значение прогресс-бара (__`arcpy.SetProgressorPosition`__) в текущее положение счетчика отбора (6).
       
