--- a/Ex02-PointClustering.Rmd
+++ b/Ex02-PointClustering.Rmd
@@ -45,7 +45,7 @@ __Рекомендации по выполнению:__
 10. Добавьте текущий полигон в выходной полигональный класс.
 11. После выполнения цикла конвертируйте полигоны в выходные точки центроидов (`FeatureToPoint_management`).
 
-## Автоматизация расчета критериев качества кластеризации
+## Автоматизация расчета критериев качества кластеризации {-}
 
 Необходимо самостоятельно реализовать инструмент, который рассчитывает критерии качества кластеризации: среднее внутрикластерное и межкластерное расстояния, а также их соотношение. Для реализации инструмента необходимо с помощью `arcpy.da.SearchCursor` прочесть координаты и номера кластеров всех точек, рассчитать все попарные расстояния между ними и далее агрегировать полученную информацию в виде искомых показателей. Результирующие значения выводятся в лог инструмента посредством `arcpy.AddMessage(...)`.
 
