ad 3rd excercise

--- a/Ex03-LineSimplification.Rmd
+++ b/Ex03-LineSimplification.Rmd
@@ -44,7 +44,7 @@ knitr::include_graphics("img/visvalingam.png")
   	MHD(\mathcal{A}, \mathcal{B}) = max\big(\overline{d}(\mathcal{A},\mathcal{B}), \overline{d}(\mathcal{B},\mathcal{A})\big),
   $$
 
-Грубо говоря, MHD есть есть максимальное из средних расстояний от $\mathcal{A}$ к $\mathcal{B}$ и от $\mathcal{B}$ к $\mathcal{A}$. Чем меньше значение MHD, тем интегрально ближе $\mathcal{A}$ и $\mathcal{B}$ друг к другу. Введение этой метрики вдохновлено классическим расстоянием Хаусдорфаа (в котором $d(\mathcal{A},\mathcal{B}) = max_{a \in \mathcal{A}} d(a,\mathcal{B})$), которое, как видно из определения, чувствительно к точкам-выбросам, поскольку использует максимальное расстояние вместо среднего.
+Грубо говоря, MHD есть есть максимальное из средних расстояний от $\mathcal{A}$ к $\mathcal{B}$ и от $\mathcal{B}$ к $\mathcal{A}$. Чем меньше значение MHD, тем интегрально ближе $\mathcal{A}$ и $\mathcal{B}$ друг к другу. Введение этой метрики вдохновлено классическим расстоянием Хаусдорфа (в котором $d(\mathcal{A},\mathcal{B}) = max_{a \in \mathcal{A}} d(a,\mathcal{B})$), которое, как видно из определения, чувствительно к точкам-выбросам, поскольку использует максимальное расстояние вместо среднего.
 
 При оценке геометрической точности в качестве множеств $\mathcal{A}$ и $\mathcal{B}$ используются ребра исходного и генерализованного множеств линий соответственно. 
 
