--- a/Ex04-LineSelection.Rmd
+++ b/Ex04-LineSelection.Rmd
@@ -114,7 +114,7 @@ $$\rho_{L} = \frac{\sum_{k}^{}{w_{k}L_{k}}}{A}$$
 В качестве отправной точки можно использовать инструмент геообработки для оценки относительной графической нагрузки точечных объектов, разработанный вами в Самостоятельной работе №1. В процессе экспериментальной работы используйте следующие толщины линий (в пикселах):
 
 ```{r, echo = FALSE}
-rosstat::include_table('tables/linewidth_params.xlsx', caption = 'Параметры толщины линии')
+knitr::kable(readxl::read_excel('tables/linewidth_params.xlsx'), caption = 'Параметры толщины линии')
 ```
 
 ## Часть 4. Создание и анализ карты транспортной связности районных центров субъекта {-}
