--- a/Ex04-LineSelection.Rmd
+++ b/Ex04-LineSelection.Rmd
@@ -4,32 +4,36 @@
 
 **Аннотация**. Задание посвящено знакомству с методикой автоматизированного отбора дорог для мелкомасштабного картографирования. Необходимо реализовать алгоритм прореживания транспортной сети (отбора линий), основанный  на принципе маршрутной связности населенных пунктов. Дополнительно реализуется расчет условной графической нагрузки для линий. Задание выполняется путем разработки инструмента геообработки Python Toolbox с модулем _Network Analyst_ (`arcpy.na`).
 
-Предлагаемый для реализации алгоритм основан на предположении, что в результирующем масштабе необходимо показывать транспортные коммуникации, по которым проходят кратчайшие маршруты между соседними населенными пунктами. Понятие соседства при решении этой задачи может быть формализовано разоличными способами: по количеству [@krivosheina:2012], либо по смежности [@Schmid:2013wh]. В настоящей работе используется соседство по смежности: соседними считаются населенные пункты, у которых соприкасаются ячейки Вороного. Общая схема алгоритма выглядит следующим обазом:
+Предлагаемый для реализации алгоритм основан на предположении, что в результирующем масштабе необходимо показывать транспортные пути, по которым проходят кратчайшие маршруты между соседними населенными пунктами. Понятие соседства при решении этой задачи может быть формализовано разоличными способами: по количеству [@krivosheina:2012], либо по смежности [@Schmid:2013wh]. В настоящей работе используется соседство по смежности: соседними считаются населенные пункты, у которых соприкасаются ячейки Вороного. Общая схема алгоритма выглядит следующим обазом:
 
 1. Строится граф дорожной сети.
 2. Строится диаграмма Вороного населенных пунктов.
 3. Организуется цикл по точкам населенных пунктов:
     - выбирается текущая точка (_центральная_);
-    - выбирается относящаяся к центральной точке ячейка Вороного;
+    - выбирается относящаяся к текущей точке ячейка Вороного;
     - для выбранной ячейки выбираются смежные с ней (касающиеся по границе);
     - выбираются соответствующие соседним ячейкам точки населенных пунктов;
     - от каждой соседней точки строится маршрут до центральной точки (решается задача _Closest Facility_)
     - линии, по которым прошли маршруты, помечаются флагом.
     
-В результате выполнения алгоритма все транспортные коммуникации, которые оказались задействованы в кратчайших маршрутах, будут помечены специальным флагом. Генерализация завершается исключением непомеченных линий (физическое удаление не требуется, достаточно выполнить атрибутивный запрос).
+В результате выполнения алгоритма все транспортные пути, которые оказались задействованы в кратчайших маршрутах, будут помечены специальным флагом. Генерализация завершается исключением непомеченных линий (физическое удаление не требуется, достаточно выполнить атрибутивный запрос).
     
 ## Часть 1. Подготовка исходных данных {-}
 
-1. Добавьте в исходные слой линий целочисленное поле *Show*, которое будет заполняться флагом отбора.
+0. Выберите регион для выполнения задания и скопируйте себе соответствующую базу данных из архива приложенного к данному заданию.
 
-2. Создайте набор пространственных объектов (**Feature Dataset**) внутри базы геоданных и импортируйте в него класс дорожной сети (_rdslin_).
+1. Добавьте в исходный слой линий (`rdslin`) целочисленное поле *Show*, которое будет заполняться флагом отбора.
+
+2. Добавьте в исходный слой населенных пунктов (`poppnt`) целочисленное статуса *Status*, которое будет хранить роль населенного пункта в процессе отбора элементов транспортной сети. Заполните это поле следующим образом: единица ($1$) должна стоять у населенных пунктов, располагающихся внутри выбранного субъекта и имеющих статус не ниже райцентра, двойка ($2$) должна стоять у всех населенных пунктов, располагающихся за пределами субъекта. Все остальные населенные пункты (располагающиеся внутри субъекта, но имеющие статус ниже райцентра) должны иметь значение $0$. 
+
+2. Создайте набор пространственных объектов (**Feature Dataset**) внутри базы геоданных и импортируйте в него слой дорожной сети.
 
 3. Создайте в слое дорог новое целочисленное поле *Hierarchy* и заполните его значениями:
     - 1 — для автомагистралей и усовершенствованных шоссе
     - 2 — для шоссе
     - 3 — для всех прочих дорог
 
-4. Внутри набора пространственных объектов создайте набор сетевых данных (*Network Dataset*), используя слой *rdslin*. Все параметры оставьте по умолчанию, за исключением:
+4. Внутри набора пространственных объектов создайте набор сетевых данных (*Network Dataset*), используя слой _rdslin_. Все параметры оставьте по умолчанию, за исключением:
     - *Elevation Fields* --- None
     - *Driving Directions* --- None
     - *Attributes*: добавить новый атрибут типа *Hierarchy* (**Add**). Далее добавить для него оценщика (**Evaluators**), указать, что оценку необходимо делать по полю **Hierarchy**.
@@ -41,53 +45,53 @@
  - исходные точки (**Input Points**),
  - исходные линии (**Input Lines**),
  - набор сетевых данных (**Input Network Dataset**)
+ - поле статуса (**Status Field**)
  - поле видимости (**Show Field**)
  
-Реализуйте модель в соответствии со следующей последовательностью действий:
+По результатам выполнения инструмента в поле **Show Field** должно быть проставлено значение $1$ для отобранных линий. Все остальные линии должны иметь значение $0$. 
+Реализуйте скрипт геообработки в соответствии со следующей последовательностью действий:
 
-1. Создать диаграмму Вороного точек (**Create Thiessen Polygons**). Разместите диаграмму в памяти компьютера (`in_memory\voronoy`).
+1. Создать слой линий (**Create Feature Layer**).
 
-2. Создать слой линий (**Create Feature Layer**).
+1. Создать слой точек (**Create Feature Layer**), оставив в нем только точки, со статусом выше $0$ (используйте параметр `where_clause`)
 
-3. Создать слой точек (**Create Feature Layer**).
+1. Создать диаграмму Вороного для полученного слоя точек (**Create Thiessen Polygons**). Разместите диаграмму в памяти компьютера (`in_memory\voronoy`).
 
-4. Создать слой диаграммы Вороного (**Create Feature Layer**).
+1. Создать слой диаграммы Вороного (**Create Feature Layer**).
 
-5. Создать поисковый курсор для последовательного обхода ячеек (`rows = arcpy.da.SearchCursor(...)`)
+1. Создать поисковый курсор (`rows = arcpy.da.SearchCursor(...)`) для последовательного обхода ячеек диаграммы Вороного (1), оставив в нем только поле статуса и поле геометрии.
 
-6. Организовать обход всех ячеек диаграммы Вороного 1 с помощью курсора (`for row in rows:`. Все дальнейшие операции выполняются внутри цикла.
+1. Организовать цикл по строкам созданного курсора (`for row in rows:`). Все дальнейшие операции выполняются внутри цикла.
 
-7. Прочитать идентификатор текущего объекта (`id = row[0]`).
+1. Если текущая ячейка имеет статус $2$, перейти на следующую итерацию цикла.
 
-8. Выбрать текущую ячейку Вороного в слое диаграммы 4 по идентификатору (**Select By Attributes**)
+1. Создать на основе сетевого набора данных слой поиска ближайших пунктов обслуживания (**Make Closest Facility Layer**). В качестве параметра *Number of Facilities to Find* оставьте 1. Установите режим движения `TRAVEL_FROM`.
 
-9. Выбрать с помощью полигона 7 его соседей, используя правило BOUNDARY\_TOUCHES (**Select By Location**).
+1. Выбрать точку населенного пункта геометрией объекта текущей строки курсора (`row[1]`, если геометрическое поле указано вторым по порядку), используя правило `WITHIN` (**Select By Location**).
 
-10. Выбрать в слое точек 3 соседей с помощью полигонов 9, используя правило INTERSECT (**Select By Location**).
+1. Добавить в слой поиска выбранную точку (**Add Locations** в режиме *Facilities*).
 
-11. Создать на основе сетевого набора данных слой поиска ближайших пунктов обслуживания (**Make Closest Facility Layer**). В качестве параметра *Number of Facilities to Find* оставьте 1. Установите режим движения TRAVEL\_FROM*.*
+1. Выбрать с помощью геометрии текущего полигона (`row[1]`) его соседей, используя правило  (**Select By Location**).
 
-12. Добавить в слой поиска 11 точки соседей 10 (**Add Locations** в режиме *Incidents*)
+1. Выбрать в слое точек с помощью выбранных полигонов, используя правило INTERSECT (**Select By Location**).
 
-13. Выбрать текущую точку с помощью полигона 8, используя правило WITHIN (**Select By Location**).
+1. Добавить в слой поиска ближайших пунктов обслуживания точки соседей (**Add Locations** в режиме *Incidents*)
 
-14. Добавить в слой поиска текущую точку 13 (**Add Locations** в режиме *Facilities*).
+1. Очистить выборку в слое диаграммы Вороного (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
 
-15. Очистить выборку в слое диаграммы Вороного 4 (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
+1. Очистить выборку в слое точек (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
 
-16. Очистить выборку в слое точек 3. (**Select By Attributes** в режиме `CLEAR\_SELECTION`).
+1. Запустить расчет задачи *Closest Facility* (**Solve**)
 
-17. Запустить расчет задачи *Closest Facility* для слоя 11 (**Solve**)
+1. Извлечь линии маршрутов *Routes* (**Select Data**) из полученного слоя.
 
-18. Извлечь линии маршрутов *Routes* (**Select Data**) из слоя 17.
+1. Выбрать линии в слое дорог маршрутами (**Select By Location**), используя правило `SHARE_A_LINE_SEGMENT_WITH`.
 
-19. Выбрать линии 2 маршрутами 17 (**Select By Location**), используя правило `SHARE_A_LINE_SEGMENT_WITH`.
+1. Вычислить поле *Show Field* для выбранных линий 2, используя калькулятор поля (**Calculate Field**). Проставить выделенным линиям значение 1.
 
-20. Вычислить поле *Show Field* для линий 2, используя калькулятор поля (**Calculate Field**). Проставить выделенным линиям значение 1.
+1. Очистить выборку в слое линий. (**Select By Attributes** в режиме `CLEAR_SELECTION`).
 
-21. Очистить выборку в слое линий 2. (**Select By Attributes** в режиме `CLEAR_SELECTION`).
-
-22. Удалить слой *Closest Facility* 10 (**Delete**).
+1. Удалить слой *Closest Facility* (**Delete**).
 
 ## Часть 3. Создание инструента Python Toolbox для оценки относительной графической нагрузки по линейным объектам {-}
 
@@ -121,7 +125,7 @@ knitr::kable(readxl::read_excel('tables/linewidth_params.xlsx'), caption = 'Па
 
 Используя разработанные инструменты отбора и оценки графической нагрузки, выполните заключительную часть работы:
 
-1. Выполните отбор элементов дорожной сети, проходящих через районные центры (poppnt\_dist). Оформите результат в виде карты масштаба 1:8 000 000. Используйте толщины линий 3, 1.5 и 0.75 пункта соответственно. На схеме должны быть подписаны все районные центры, нанесена граница субъекта и оформлена легенда по трем классам дорог.
+1. Выполните отбор элементов дорожной сети, проходящих через районные центры выбранного субъекта. Оформите результат в виде карты масштаба 1:8 000 000. Используйте толщины линий 3, 1.5 и 0.75 пункта соответственно. На схеме должны быть подписаны все районные центры внутри и за пределами субъекта, нанесена граница субъекта и оформлена легенда по трем классам дорог.
 
 2. Вычислите условную графическую нагрузку [всех]{.underline} исходных дорог в масштабе 1:1 000 000 (размер квадрата 2х2 см в масштабе карты). Используйте толщины линий 6, 3 и 1.5 пункта соответственно. Оформите картограмму графической нагрузки в масштабе 1:8 000 000.
 
