--- a/Ex06-ReliefGeneralization.Rmd
+++ b/Ex06-ReliefGeneralization.Rmd
@@ -14,9 +14,9 @@ __Задачи__ работы включают подготовку исходн
     knitr::include_graphics("img/generalize-dem.png")
     ```
 
-1. Закачайте фрагмент ЦМР _GEBCO 2019_ размером $10^\circ \times 10^\circ$, используя [веб-интерфейс](https://download.gebco.net/). Для этого включите показ градусной сетки (_Show graticule_), выберите формат _GeoTIFF_ и, используя CTRL + клик, обведите квадрат со сторонами, примерно совпадающими с линиями сетки, кратными 5 градусам:
+1. Закачайте фрагмент ЦМР _GEBCO 2021_ размером $10^\circ \times 10^\circ$, используя [веб-интерфейс](https://download.gebco.net/). Для этого включите показ градусной сетки (_Show graticule_), выберите формат _GeoTIFF_ и, используя CTRL + клик, обведите квадрат со сторонами, примерно совпадающими с линиями сетки, кратными 5 градусам:
     
-    ```{r gebco-download, out.width = "100%", fig.cap="Загрузка цифровой модели рельефа GEBCO 2019"}
+    ```{r gebco-download, out.width = "100%", fig.cap="Загрузка цифровой модели рельефа GEBCO"}
     knitr::include_graphics("img/download-gebco.png")
     ```
     
