--- a/docs/slides/talkXX_Schematization.Rmd
+++ b/docs/slides/talkXX_Schematization.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Схематизация картографического изображения"
-subtitle: "Картографические базы данных"
+title: "Схематизированные геоизображения"
+subtitle: "Картография"
 author: "Тимофей Самсонов"
-date: "2019-12-07"
+date: "2022-09-26"
 output:
   xaringan::moon_reader:
     css: [default, "style.css"]
@@ -67,29 +67,30 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <!-- --- -->
 
-<!-- ## Геоизображение -->
+## Геоизображение
 
-<!-- .large[__Геоизображение__ — это модель земных (планетных) объектов или процессов, представленная в графической образной форме.]  -->
+.large[__Геоизображение__ — это модель земных (планетных) объектов или процессов, представленная в графической образной форме.]
 
-<!-- Модель геоизображения должна быть: -->
+Модель геоизображения должна быть:
 
-<!-- - .red[_пространственно-временная_]: рассматривает изображаемые объекты и явления в географической среде -->
-<!-- - .green[_масштабная_]: позволяет выполнять оценки местоположения, размеров и т.д. -->
-<!-- - .blue[_генерализованная_]: показывает не всё, что _можно_, а всё, что _нужно_ -->
+- .red[_пространственно-временная_]: рассматривает изображаемые объекты и явления в географической среде
+- .green[_масштабная_]: позволяет выполнять оценки местоположения, размеров и т.д.
+- .blue[_генерализованная_]: показывает не всё, что _можно_, а всё, что _нужно_
 
-<!-- --- -->
+---
 
-<!-- ## Картографические геоизображения -->
+## Картографические геоизображения
 
-<!-- __.red[Карта]__ — это математически определенное, уменьшенное, генерализованное изображение поверхности Земли, другого небесного тела или космического пространства, показывающее расположенные или спроецированные на них объекты в принятой системе условных знаков. -->
+__.red[Карта]__ — это математически определенное, уменьшенное, генерализованное изображение поверхности Земли, другого небесного тела или космического пространства, показывающее расположенные или спроецированные на них объекты в принятой системе условных знаков.
 
-<!-- __.blue[С элементами схематизации]__: -->
-<!-- - схематизированные карты -->
-<!-- - схемы и карты потоков -->
-<!-- - анаморфированные карты -->
-<!-- - картоиды -->
+__.blue[С элементами схематизации]__:
+- схематизированные карты
+- схемы и карты потоков
+- карты транспортных систем
+- анаморфированные карты
+- картоиды
 
-<!-- --- -->
+---
 
 ## Схематизация
 
@@ -553,6 +554,50 @@ knitr::include_graphics("img/talkxx/distr-steiner.png")
 knitr::include_graphics("img/talkxx/footprint.png")
 ```
 .vsmall[D. Phan, L. Xiao, R. Yeh, P. Hanrahan, and T. Winograd. Flow map layout. In Proc. IEEE Symposium on Information Visualization (INFOVIS ’05), pages 219–224, 2005]
+
+---
+
+## Карты транспортных систем
+
+Особный вид схематизированных карт — карты транспортных систем.
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talkxx/metro1.png")
+```
+.vsmall[Bast H. Efficient Generation of Geographically Accurate Transit Maps / H. Bast, P. Brosi, S. Storandt // ACM Transactions on Spatial Algorithms and Systems. – 2019. – Vol. 5. – №4 . – P. 1-36.]
+
+---
+
+## Карты транспортных систем
+
+Важный аспект — минимзация количества пересечений и проведение их под углом, близким к 90 градусов.
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talkxx/metro2.png")
+```
+.vsmall[Bast H. Efficient Generation of Geographically Accurate Transit Maps / H. Bast, P. Brosi, S. Storandt // ACM Transactions on Spatial Algorithms and Systems. – 2019. – Vol. 5. – №4 . – P. 1-36.]
+
+---
+
+## Карты транспортных систем
+
+Наиболее трудная часть визуализации — распределение линий в транспортных узлах.
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talkxx/metro3.png")
+```
+.vsmall[Bast H. Efficient Generation of Geographically Accurate Transit Maps / H. Bast, P. Brosi, S. Storandt // ACM Transactions on Spatial Algorithms and Systems. – 2019. – Vol. 5. – №4 . – P. 1-36.]
+
+---
+
+## Карты транспортных систем
+
+Результирающие схемы довольно близки к составленным вручную, хотя и уступают им по качеству.
+
+```{r, out.width = "100%", fig.cap=""}
+knitr::include_graphics("img/talkxx/metro4.png")
+```
+.vsmall[Bast H. Efficient Generation of Geographically Accurate Transit Maps / H. Bast, P. Brosi, S. Storandt // ACM Transactions on Spatial Algorithms and Systems. – 2019. – Vol. 5. – №4 . – P. 1-36.]
 
 ---
 
