--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,5 @@
 --- 
-title: "Картографические базы данных"
-subtitle: "Генерализация пространственных данных"
+title: "Генерализация пространственных данных"
 author: "Тимофей Самсонов"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
