--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -29,7 +29,7 @@ __Входные данные:__
 Тестирование инструмента производится на примере слоя `poppnt_ural` (можно вырезать из него небольшой фрагмент из нескольких десятков точек.
 
 __Результат:__
-По результатам выполнения инструмента каждой точке в поле _Remain Field_ должно быть проставлено значение $1$ (оставить) или $0$ (убрать).
+По результатам выполнения инструмента каждой точке в поле сохранения точки должно быть проставлено значение $1$ (оставить) или $0$ (убрать).
 
 ## Реализация алгоритма взвешенной эффективной площади {-}
 
@@ -44,7 +44,7 @@ __Входные данные:__
 Тестирование инструмента производится на примере слоя `poppnt_ural` (можно вырезать из него небольшой фрагмент из нескольких десятков точек.
 
 __Результат:__
-По результатам выполнения инструмента каждой точке в поле _Remain Field_ должно быть проставлено значение $1$ (оставить) или $0$ (убрать).
+По результатам выполнения инструмента каждой точке в поле сохранения точки должно быть проставлено значение $1$ (оставить) или $0$ (убрать).
 
 ## Реализация модели оценки условной графической нагрузки {-}
 
