upd point selection

--- a/Ex01-PointSelection.Rmd
+++ b/Ex01-PointSelection.Rmd
@@ -55,7 +55,7 @@ __Входные параметры:__
 1. Точечный слой.
 2. Поле, отвечающее за графический вес точки (диаметр значка).
 3. Пространственное разрешение сетки (в метрах).
-4. Выходной слой сетки.
+4. Выходное поле графической нагрузки
 
 __Требования к входным данным:__
 
